k8s/redis-exporter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-exporter
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-exporter
  template:
    metadata:
      labels:
        app: redis-exporter
    spec:
      containers:
        - name: exporter
          image: oliver006/redis_exporter
          env:
            - name: REDIS_ADDR
              value: "redis:6379"
          ports:
            - containerPort: 9121
